--- a/Sunapee Buoy Data Logger DO Offset 2013-2015.Rmd
+++ b/Sunapee Buoy Data Logger DO Offset 2013-2015.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Sunapee Buoy Data Logger DO Offset 2013-2015"
 author: "B. Steele, Weathers Lab, Cary Institue"
-date: "2022-02-22"
+date: "22 Feb 2022"
 output: word_document
 ---
 
